--- a/Day2/2_02_Mask_R-CNN_object_Recognition/MASK_R_CNN(HOT).ipynb
+++ b/Day2/2_02_Mask_R-CNN_object_Recognition/MASK_R_CNN(HOT).ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "MASK R-CNN(HOT).ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -27,27 +13,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_CZxR22KW8Gi"
-      },
-      "source": [
-        "##<font color=green>**구글 드라이브 연결**</font>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-4AUCPfVXjGI"
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Mw7o_C2aye9W"
       },
       "source": [
@@ -57,45 +22,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "X4Zd14TLK5sb"
+        "id": "X4Zd14TLK5sb",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!pip uninstall -y keras-nightly tensorflow"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Vi1cNEwWt6Wt"
-      },
-      "source": [
-        "!pip install tensorboard==1.15.0 tensorflow==1.15.0 tensorflow-estimator==1.15.1 tensorflow-gpu==1.15.2 tensorflow-gpu-estimator==2.1.0 Keras==2.2.5 Keras-Applications==1.0.8 Keras-Preprocessing==1.1.0 h5py==2.10.0 utils"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "rt3qo64Z0X5q"
-      },
-      "source": [
-        "##<font color=green>**구글 드라이브로 경로 이동**</font>"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "Zsat8Bg4y1fA"
-      },
-      "source": [
-        "cd drive/MyDrive/"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "Vi1cNEwWt6Wt",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "!pip install tensorboard==1.15.0 tensorflow==1.15.0 tensorflow-estimator==1.15.1 tensorflow-gpu==1.15.2 tensorflow-gpu-estimator==2.1.0 Keras==2.2.5 Keras-Applications==1.0.8 Keras-Preprocessing==1.1.0 h5py==2.10.0 utils"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -108,14 +59,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "nzrTmtSu0V_r"
+        "id": "nzrTmtSu0V_r",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!git clone https://github.com/matterport/Mask_RCNN"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -128,26 +82,32 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "3Qxx3OaO0yic"
+        "id": "3Qxx3OaO0yic",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "%cd Mask_RCNN/\n",
         "!wget https://github.com/matterport/Mask_RCNN/releases/download/v2.0/mask_rcnn_coco.h5"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "OCogHkMJ1Q0B"
+        "id": "OCogHkMJ1Q0B",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "cd samples/"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -169,9 +129,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "h9lbRcjv19-p"
+        "id": "h9lbRcjv19-p",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "import os\n",
         "import sys\n",
@@ -207,9 +172,7 @@
         "\n",
         "# Directory of images to run detection on\n",
         "IMAGE_DIR = os.path.join(ROOT_DIR, \"images\")"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -224,9 +187,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "-_QTCoYb40IE"
+        "id": "-_QTCoYb40IE",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "class InferenceConfig(coco.CocoConfig):\n",
         "    # Set batch size to 1 since we'll be running inference on\n",
@@ -236,9 +204,7 @@
         "\n",
         "config = InferenceConfig()\n",
         "config.display()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -251,18 +217,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "z43M590043Pu"
+        "id": "z43M590043Pu",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Create model object in inference mode.\n",
         "model = modellib.MaskRCNN(mode=\"inference\", model_dir=MODEL_DIR, config=config)\n",
         "\n",
         "# Load weights trained on MS-COCO\n",
         "model.load_weights(COCO_MODEL_PATH, by_name=True)"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -275,9 +244,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "WBBiFO_I46LL"
+        "id": "WBBiFO_I46LL",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# COCO Class names\n",
         "class_names = ['BG', 'person', 'bicycle', 'car', 'motorcycle', 'airplane',\n",
@@ -295,9 +269,7 @@
         "               'keyboard', 'cell phone', 'microwave', 'oven', 'toaster',\n",
         "               'sink', 'refrigerator', 'book', 'clock', 'vase', 'scissors',\n",
         "               'teddy bear', 'hair drier', 'toothbrush']"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -310,9 +282,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "RgDdMinW49SW"
+        "id": "RgDdMinW49SW",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Load a random image from the images folder\n",
         "file_names = next(os.walk(IMAGE_DIR))[2]\n",
@@ -325,9 +302,7 @@
         "r = results[0]\n",
         "visualize.display_instances(image, r['rois'], r['masks'], r['class_ids'], \n",
         "                            class_names, r['scores'])"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -341,12 +316,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "jsSMplwZ5GVA"
+        "id": "jsSMplwZ5GVA",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "# Load a random image from the images folder\n",
-        "image = skimage.io.imread('/content/drive/MyDrive/Mask_RCNN/images/1045023827_4ec3e8ba5c_z.jpg')\n",
+        "image = skimage.io.imread('/content/Mask_RCNN/images/1045023827_4ec3e8ba5c_z.jpg')\n",
         "\n",
         "# Run detection\n",
         "results = model.detect([image], verbose=1)\n",
@@ -355,9 +335,7 @@
         "r = results[0]\n",
         "visualize.display_instances(image, r['rois'], r['masks'], r['class_ids'], \n",
         "                            class_names, r['scores'])"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -379,14 +357,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "Lwl1MW78qsnK"
+        "id": "Lwl1MW78qsnK",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!gdown --id 1V68xfo5-YrpHgh0IPuAPWD21rM6U17hW --output KITTI_data.mp4"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -412,9 +393,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "UIykE_FNBK1R"
+        "id": "UIykE_FNBK1R",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "def random_colors(N):\n",
         "    np.random.seed(1)\n",
@@ -466,9 +452,7 @@
         "        )\n",
         " \n",
         "    return image"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -484,9 +468,14 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "Za1fcefN80JM"
+        "id": "Za1fcefN80JM",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "import cv2\n",
         "from google.colab.patches import cv2_imshow\n",
@@ -519,9 +508,7 @@
         "capture.release()\n",
         "output.release()\n",
         "cv2.destroyAllWindows()"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -534,15 +521,32 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "9jlhFbvfO7vo"
+        "id": "9jlhFbvfO7vo",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "from google.colab import files\n",
         "files.download('video_masked.avi')"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "MASK R-CNN(HOT).ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
