--- a/Day2/2_04_YOLO_object_Recognition/YOLO(HOT).ipynb
+++ b/Day2/2_04_YOLO_object_Recognition/YOLO(HOT).ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "YOLO(HOT).ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -21,50 +6,9 @@
         "id": "zEL1RCn4GOQb"
       },
       "source": [
-        "#<font color=blue>**YOLO 객체 인식 실습**</font>\r\n",
+        "#<font color=blue>**YOLO 객체 인식 실습**</font>\n",
         "각 셀을 순서대로 shift + ENTER로 실행"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_CZxR22KW8Gi"
-      },
-      "source": [
-        "##<font color=green>**구글 드라이브 연결**</font>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-4AUCPfVXjGI"
-      },
-      "source": [
-        "from google.colab import drive\r\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "wUz5HiprGVvn"
-      },
-      "source": [
-        "##<font color=green>**구글 드라이브 경로로 이동**</font>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "dnm_1p24BHXD"
-      },
-      "source": [
-        "cd drive/MyDrive/"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -77,14 +21,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "d3XvFa_1CSUm"
+        "id": "d3XvFa_1CSUm",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!git clone https://github.com/AlexeyAB/darknet"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -97,17 +44,20 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "aoQqCwQ8CSzP"
-      },
-      "source": [
-        "%cd darknet/\r\n",
-        "!sed -i 's/OPENCV=0/OPENCV=1/' Makefile\r\n",
-        "!sed -i 's/GPU=0/GPU=1/' Makefile\r\n",
-        "!sed -i 's/CUDNN=0/CUDNN=1/' Makefile"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "aoQqCwQ8CSzP",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "%cd darknet/\n",
+        "!sed -i 's/OPENCV=0/OPENCV=1/' Makefile\n",
+        "!sed -i 's/GPU=0/GPU=1/' Makefile\n",
+        "!sed -i 's/CUDNN=0/CUDNN=1/' Makefile"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -120,14 +70,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "xdaqtJXMEB4-"
+        "id": "xdaqtJXMEB4-",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!make"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -135,52 +88,55 @@
         "id": "RQJ3vthnHQrf"
       },
       "source": [
-        "##<font color=green>**유용한 함수 구성**</font>\r\n",
-        "imShow() : 저장된 이미지 출력\r\n",
-        "\r\n",
-        "upload() : 현재 폴더 경로에 파일 업로드\r\n",
-        "\r\n",
+        "##<font color=green>**유용한 함수 구성**</font>\n",
+        "imShow() : 저장된 이미지 출력\n",
+        "\n",
+        "upload() : 현재 폴더 경로에 파일 업로드\n",
+        "\n",
         "download() : 현재 폴더 경로의 파일다운로드"
       ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "J634NpsgEG33"
-      },
-      "source": [
-        "# define helper functions\r\n",
-        "def imShow(path):\r\n",
-        "  import cv2\r\n",
-        "  import matplotlib.pyplot as plt\r\n",
-        "  %matplotlib inline\r\n",
-        "\r\n",
-        "  image = cv2.imread(path)\r\n",
-        "  height, width = image.shape[:2]\r\n",
-        "  resized_image = cv2.resize(image,(3*width, 3*height), interpolation = cv2.INTER_CUBIC)\r\n",
-        "\r\n",
-        "  fig = plt.gcf()\r\n",
-        "  fig.set_size_inches(18, 10)\r\n",
-        "  plt.axis(\"off\")\r\n",
-        "  plt.imshow(cv2.cvtColor(resized_image, cv2.COLOR_BGR2RGB))\r\n",
-        "  plt.show()\r\n",
-        "\r\n",
-        "# use this to upload files\r\n",
-        "def upload():\r\n",
-        "  from google.colab import files\r\n",
-        "  uploaded = files.upload() \r\n",
-        "  for name, data in uploaded.items():\r\n",
-        "    with open(name, 'wb') as f:\r\n",
-        "      f.write(data)\r\n",
-        "      print ('saved file', name)\r\n",
-        "\r\n",
-        "# use this to download a file  \r\n",
-        "def download(path):\r\n",
-        "  from google.colab import files\r\n",
-        "  files.download(path)"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "J634NpsgEG33",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "# define helper functions\n",
+        "def imShow(path):\n",
+        "  import cv2\n",
+        "  import matplotlib.pyplot as plt\n",
+        "  %matplotlib inline\n",
+        "\n",
+        "  image = cv2.imread(path)\n",
+        "  height, width = image.shape[:2]\n",
+        "  resized_image = cv2.resize(image,(3*width, 3*height), interpolation = cv2.INTER_CUBIC)\n",
+        "\n",
+        "  fig = plt.gcf()\n",
+        "  fig.set_size_inches(18, 10)\n",
+        "  plt.axis(\"off\")\n",
+        "  plt.imshow(cv2.cvtColor(resized_image, cv2.COLOR_BGR2RGB))\n",
+        "  plt.show()\n",
+        "\n",
+        "# use this to upload files\n",
+        "def upload():\n",
+        "  from google.colab import files\n",
+        "  uploaded = files.upload() \n",
+        "  for name, data in uploaded.items():\n",
+        "    with open(name, 'wb') as f:\n",
+        "      f.write(data)\n",
+        "      print ('saved file', name)\n",
+        "\n",
+        "# use this to download a file  \n",
+        "def download(path):\n",
+        "  from google.colab import files\n",
+        "  files.download(path)"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -193,14 +149,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "ECdpr3w1EyLP"
+        "id": "ECdpr3w1EyLP",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!wget https://pjreddie.com/media/files/yolov3.weights"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -213,14 +172,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "rYOPXZU6IvjH"
+        "id": "rYOPXZU6IvjH",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!wget https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -233,15 +195,18 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "R96kVYQkE1o8"
-      },
-      "source": [
-        "!./darknet detect cfg/yolov3.cfg yolov3.weights data/dog.jpg\r\n",
-        "imShow('predictions.jpg')"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "R96kVYQkE1o8",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "!./darknet detect cfg/yolov3.cfg yolov3.weights data/dog.jpg\n",
+        "imShow('predictions.jpg')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -254,15 +219,18 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "8BEdbhKSGJnC"
-      },
-      "source": [
-        "!./darknet detect cfg/yolov4.cfg yolov4.weights data/dog.jpg\r\n",
-        "imShow('predictions.jpg')"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "8BEdbhKSGJnC",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "!./darknet detect cfg/yolov4.cfg yolov4.weights data/dog.jpg\n",
+        "imShow('predictions.jpg')"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -284,14 +252,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "Lwl1MW78qsnK"
+        "id": "Lwl1MW78qsnK",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!gdown --id 1V68xfo5-YrpHgh0IPuAPWD21rM6U17hW --output KITTI_data.mp4"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -304,14 +275,17 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "ZZgLrErNKtJ0"
+        "id": "ZZgLrErNKtJ0",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!./darknet detector demo cfg/coco.data cfg/yolov3.cfg yolov3.weights -dont_show KITTI_data.mp4 -out_filename yolo_video.avi"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -324,15 +298,33 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "9jlhFbvfO7vo"
-      },
-      "source": [
-        "from google.colab import files\r\n",
-        "files.download('yolo_video.avi')"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "9jlhFbvfO7vo",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "from google.colab import files\n",
+        "files.download('yolo_video.avi')"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "YOLO(HOT).ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
