--- a/Day2/2_05_CV_Object_Tracking/CV_object_tracking.ipynb
+++ b/Day2/2_05_CV_Object_Tracking/CV_object_tracking.ipynb
@@ -1,19 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "CV_object_tracking.ipynb",
-      "provenance": [],
-      "collapsed_sections": [],
-      "toc_visible": true
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -21,31 +6,10 @@
         "id": "kY4mExvnM7OA"
       },
       "source": [
-        "#<font color=blue>**CV기반 객체 추적 실습**\r\n",
-        "\r\n",
+        "#<font color=blue>**CV기반 객체 추적 실습**\n",
+        "\n",
         "각 셀을 순서대로 shift + ENTER로 실행"
       ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "_CZxR22KW8Gi"
-      },
-      "source": [
-        "##<font color=green>**구글 드라이브 연결**</font>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-4AUCPfVXjGI"
-      },
-      "source": [
-        "from google.colab import drive\r\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -58,15 +22,18 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "T6c39OWK4hKg"
-      },
-      "source": [
-        "%mkdir drive/MyDrive/CV_object_tracking\r\n",
-        "%cd drive/MyDrive/CV_object_tracking"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "T6c39OWK4hKg",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "%mkdir/CV_object_tracking\n",
+        "%cd /CV_object_tracking"
+      ]
     },
     {
       "cell_type": "markdown",
@@ -79,25 +46,31 @@
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "-XRQCbeBS4mg"
+        "id": "-XRQCbeBS4mg",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!gdown --id 1KfSuoleDfYbIoFUasiyCWDLGqrfwLaNG --output cv_tracking.zip"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
-        "id": "MWiZR9KUYZT9"
+        "id": "MWiZR9KUYZT9",
+        "vscode": {
+          "languageId": "python"
+        }
       },
+      "outputs": [],
       "source": [
         "!unzip cv_tracking.zip"
-      ],
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
@@ -119,135 +92,97 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "3VMYF-saQyVl"
-      },
-      "source": [
-        "import cv2\r\n",
-        "import numpy as np\r\n",
-        "\r\n",
-        "cap = cv2.VideoCapture(\"./book.mp4\")\r\n",
-        "ret, frame = cap.read()\r\n",
-        "\r\n",
-        "termination = (cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, 10, 1)\r\n",
-        "width = cap.get(cv2.CAP_PROP_FRAME_WIDTH)\r\n",
-        "height = cap.get(cv2.CAP_PROP_FRAME_HEIGHT)\r\n",
-        "fourcc = cv2.VideoWriter_fourcc(*'DIVX')\r\n",
-        "out = cv2.VideoWriter('./book_output.avi', fourcc, 30.0, (int(width), int(height)))\r\n",
-        "\r\n",
-        "trackWindow = (356, 119, 357, 524)\r\n",
-        "RoI = frame[trackWindow[1]:trackWindow[1] + trackWindow[3], trackWindow[0]:trackWindow[0] + trackWindow[2]]\r\n",
-        "RoI = cv2.cvtColor(RoI, cv2.COLOR_BGR2HSV)\r\n",
-        "RoI_hist = cv2.calcHist([RoI], [0], None, [180], [0, 180])\r\n",
-        "\r\n",
-        "cv2.normalize(RoI_hist, RoI_hist, 0, 255, cv2.NORM_MINMAX)\r\n",
-        "\r\n",
-        "while True:\r\n",
-        "\r\n",
-        "    ret, frame = cap.read()\r\n",
-        "    \r\n",
-        "    if not ret:\r\n",
-        "        break\r\n",
-        "\r\n",
-        "    if trackWindow is not None:\r\n",
-        "\r\n",
-        "        hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\r\n",
-        "        dst = cv2.calcBackProject([hsv], [0, 1], RoI_hist, [0,180, 0, 256], 1)\r\n",
-        "        ret, trackWindow = cv2.CamShift(dst, trackWindow, termination)\r\n",
-        "\r\n",
-        "        x, y, w, h = trackWindow\r\n",
-        "        cv2.rectangle(frame, (x,y), (x+w, y+h), (0,0,255),2)\r\n",
-        "    out.write(frame)\r\n",
-        "\r\n",
-        "cap.release()"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "3VMYF-saQyVl",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "import cv2\n",
+        "import numpy as np\n",
+        "\n",
+        "cap = cv2.VideoCapture(\"./book.mp4\")\n",
+        "ret, frame = cap.read()\n",
+        "\n",
+        "termination = (cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, 10, 1)\n",
+        "width = cap.get(cv2.CAP_PROP_FRAME_WIDTH)\n",
+        "height = cap.get(cv2.CAP_PROP_FRAME_HEIGHT)\n",
+        "fourcc = cv2.VideoWriter_fourcc(*'DIVX')\n",
+        "out = cv2.VideoWriter('./book_output.avi', fourcc, 30.0, (int(width), int(height)))\n",
+        "\n",
+        "trackWindow = (356, 119, 357, 524)\n",
+        "RoI = frame[trackWindow[1]:trackWindow[1] + trackWindow[3], trackWindow[0]:trackWindow[0] + trackWindow[2]]\n",
+        "RoI = cv2.cvtColor(RoI, cv2.COLOR_BGR2HSV)\n",
+        "RoI_hist = cv2.calcHist([RoI], [0], None, [180], [0, 180])\n",
+        "\n",
+        "cv2.normalize(RoI_hist, RoI_hist, 0, 255, cv2.NORM_MINMAX)\n",
+        "\n",
+        "while True:\n",
+        "\n",
+        "    ret, frame = cap.read()\n",
+        "    \n",
+        "    if not ret:\n",
+        "        break\n",
+        "\n",
+        "    if trackWindow is not None:\n",
+        "\n",
+        "        hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
+        "        dst = cv2.calcBackProject([hsv], [0, 1], RoI_hist, [0,180, 0, 256], 1)\n",
+        "        ret, trackWindow = cv2.CamShift(dst, trackWindow, termination)\n",
+        "\n",
+        "        x, y, w, h = trackWindow\n",
+        "        cv2.rectangle(frame, (x,y), (x+w, y+h), (0,0,255),2)\n",
+        "    out.write(frame)\n",
+        "\n",
+        "cap.release()"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
         },
         "id": "eU1Bg3FMcURr",
-        "outputId": "12305321-8eec-4ceb-9dc9-54d3ed24c6c5"
+        "outputId": "12305321-8eec-4ceb-9dc9-54d3ed24c6c5",
+        "vscode": {
+          "languageId": "python"
+        }
       },
-      "source": [
-        "from google.colab import files\r\n",
-        "files.download('book_output.avi')"
-      ],
-      "execution_count": null,
       "outputs": [
         {
-          "output_type": "display_data",
           "data": {
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ],
+            "application/javascript": "\n    async function download(id, filename, size) {\n      if (!google.colab.kernel.accessAllowed) {\n        return;\n      }\n      const div = document.createElement('div');\n      const label = document.createElement('label');\n      label.textContent = `Downloading \"${filename}\": `;\n      div.appendChild(label);\n      const progress = document.createElement('progress');\n      progress.max = size;\n      div.appendChild(progress);\n      document.body.appendChild(div);\n\n      const buffers = [];\n      let downloaded = 0;\n\n      const channel = await google.colab.kernel.comms.open(id);\n      // Send a message to notify the kernel that we're ready.\n      channel.send({})\n\n      for await (const message of channel.messages) {\n        // Send a message to notify the kernel that we're ready.\n        channel.send({})\n        if (message.buffers) {\n          for (const buffer of message.buffers) {\n            buffers.push(buffer);\n            downloaded += buffer.byteLength;\n            progress.value = downloaded;\n          }\n        }\n      }\n      const blob = new Blob(buffers, {type: 'application/binary'});\n      const a = document.createElement('a');\n      a.href = window.URL.createObjectURL(blob);\n      a.download = filename;\n      div.appendChild(a);\n      a.click();\n      div.remove();\n    }\n  ",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
             ]
           },
           "metadata": {
             "tags": []
-          }
+          },
+          "output_type": "display_data"
         },
         {
-          "output_type": "display_data",
           "data": {
-            "application/javascript": [
-              "download(\"download_a8293743-566b-4fde-bb9b-49518c1bb6f9\", \"book_output.avi\", 5248558)"
-            ],
+            "application/javascript": "download(\"download_a8293743-566b-4fde-bb9b-49518c1bb6f9\", \"book_output.avi\", 5248558)",
             "text/plain": [
               "<IPython.core.display.Javascript object>"
             ]
           },
           "metadata": {
             "tags": []
-          }
+          },
+          "output_type": "display_data"
         }
+      ],
+      "source": [
+        "from google.colab import files\n",
+        "files.download('book_output.avi')"
       ]
     },
     {
@@ -261,62 +196,83 @@
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "w8OZoWiFXElt"
-      },
-      "source": [
-        "import cv2\r\n",
-        "import numpy as np\r\n",
-        "\r\n",
-        "cap = cv2.VideoCapture(\"./motorcycle.mp4\")\r\n",
-        "ret, frame = cap.read()\r\n",
-        "\r\n",
-        "termination = (cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, 10, 1)\r\n",
-        "width = cap.get(cv2.CAP_PROP_FRAME_WIDTH)\r\n",
-        "height = cap.get(cv2.CAP_PROP_FRAME_HEIGHT)\r\n",
-        "fourcc = cv2.VideoWriter_fourcc(*'DIVX')\r\n",
-        "out = cv2.VideoWriter('./motorcycle_output.avi', fourcc, 30.0, (int(width), int(height)))\r\n",
-        "\r\n",
-        "trackWindow = (513, 228, 43, 53)\r\n",
-        "RoI = frame[trackWindow[1]:trackWindow[1] + trackWindow[3], trackWindow[0]:trackWindow[0] + trackWindow[2]]\r\n",
-        "RoI = cv2.cvtColor(RoI, cv2.COLOR_BGR2HSV)\r\n",
-        "RoI_hist = cv2.calcHist([RoI], [0], None, [180], [0, 180])\r\n",
-        "\r\n",
-        "cv2.normalize(RoI_hist, RoI_hist, 0, 255, cv2.NORM_MINMAX)\r\n",
-        "\r\n",
-        "while True:\r\n",
-        "\r\n",
-        "    ret, frame = cap.read()\r\n",
-        "    \r\n",
-        "    if not ret:\r\n",
-        "        break\r\n",
-        "\r\n",
-        "    if trackWindow is not None:\r\n",
-        "\r\n",
-        "        hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\r\n",
-        "        dst = cv2.calcBackProject([hsv], [0, 1], RoI_hist, [0,180, 0, 256], 1)\r\n",
-        "        ret, trackWindow = cv2.CamShift(dst, trackWindow, termination)\r\n",
-        "\r\n",
-        "        x, y, w, h = trackWindow\r\n",
-        "        cv2.rectangle(frame, (x,y), (x+w, y+h), (0,0,255),2)\r\n",
-        "    out.write(frame)\r\n",
-        "\r\n",
-        "cap.release()"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "w8OZoWiFXElt",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "import cv2\n",
+        "import numpy as np\n",
+        "\n",
+        "cap = cv2.VideoCapture(\"./motorcycle.mp4\")\n",
+        "ret, frame = cap.read()\n",
+        "\n",
+        "termination = (cv2.TERM_CRITERIA_EPS | cv2.TERM_CRITERIA_COUNT, 10, 1)\n",
+        "width = cap.get(cv2.CAP_PROP_FRAME_WIDTH)\n",
+        "height = cap.get(cv2.CAP_PROP_FRAME_HEIGHT)\n",
+        "fourcc = cv2.VideoWriter_fourcc(*'DIVX')\n",
+        "out = cv2.VideoWriter('./motorcycle_output.avi', fourcc, 30.0, (int(width), int(height)))\n",
+        "\n",
+        "trackWindow = (513, 228, 43, 53)\n",
+        "RoI = frame[trackWindow[1]:trackWindow[1] + trackWindow[3], trackWindow[0]:trackWindow[0] + trackWindow[2]]\n",
+        "RoI = cv2.cvtColor(RoI, cv2.COLOR_BGR2HSV)\n",
+        "RoI_hist = cv2.calcHist([RoI], [0], None, [180], [0, 180])\n",
+        "\n",
+        "cv2.normalize(RoI_hist, RoI_hist, 0, 255, cv2.NORM_MINMAX)\n",
+        "\n",
+        "while True:\n",
+        "\n",
+        "    ret, frame = cap.read()\n",
+        "    \n",
+        "    if not ret:\n",
+        "        break\n",
+        "\n",
+        "    if trackWindow is not None:\n",
+        "\n",
+        "        hsv = cv2.cvtColor(frame, cv2.COLOR_BGR2HSV)\n",
+        "        dst = cv2.calcBackProject([hsv], [0, 1], RoI_hist, [0,180, 0, 256], 1)\n",
+        "        ret, trackWindow = cv2.CamShift(dst, trackWindow, termination)\n",
+        "\n",
+        "        x, y, w, h = trackWindow\n",
+        "        cv2.rectangle(frame, (x,y), (x+w, y+h), (0,0,255),2)\n",
+        "    out.write(frame)\n",
+        "\n",
+        "cap.release()"
+      ]
     },
     {
       "cell_type": "code",
-      "metadata": {
-        "id": "fAH3OuUp4ELX"
-      },
-      "source": [
-        "from google.colab import files\r\n",
-        "files.download('motorcycle_output.avi')"
-      ],
       "execution_count": null,
-      "outputs": []
+      "metadata": {
+        "id": "fAH3OuUp4ELX",
+        "vscode": {
+          "languageId": "python"
+        }
+      },
+      "outputs": [],
+      "source": [
+        "from google.colab import files\n",
+        "files.download('motorcycle_output.avi')"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "CV_object_tracking.ipynb",
+      "provenance": [],
+      "toc_visible": true
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
