--- a/Day2/2_06_DeepSORT_object_Tracking/DeepSort_object_tracking.ipynb
+++ b/Day2/2_06_DeepSORT_object_Tracking/DeepSort_object_tracking.ipynb
@@ -1,18 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "DeepSort_object_tracking.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "accelerator": "GPU"
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -27,39 +13,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "_CZxR22KW8Gi"
-      },
-      "source": [
-        "##<font color=green>**구글 드라이브 연결**</font>"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "-4AUCPfVXjGI",
-        "outputId": "93aa4c22-4497-417e-9be3-1ce43f37e133",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        }
-      },
-      "source": [
-        "from google.colab import drive\n",
-        "drive.mount('/content/drive')"
-      ],
-      "execution_count": 1,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "name": "stdout",
-          "text": [
-            "Mounted at /content/drive\n"
-          ]
-        }
-      ]
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "Hu_11J2Xu6g4"
       },
       "source": [
@@ -69,21 +22,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 1,
       "metadata": {
-        "id": "24AjNqcUHMjV",
-        "outputId": "9a4d9349-8e0d-4a19-93f2-79fbc56d75e9",
         "colab": {
           "base_uri": "https://localhost:8080/"
+        },
+        "id": "24AjNqcUHMjV",
+        "outputId": "9a4d9349-8e0d-4a19-93f2-79fbc56d75e9",
+        "vscode": {
+          "languageId": "python"
         }
       },
-      "source": [
-        "!pip uninstall -y keras-nightly tensorflow"
-      ],
-      "execution_count": 1,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "\u001b[33mWARNING: Skipping keras-nightly as it is not installed.\u001b[0m\n",
             "Found existing installation: tensorflow 2.7.0\n",
@@ -91,25 +44,28 @@
             "  Successfully uninstalled tensorflow-2.7.0\n"
           ]
         }
+      ],
+      "source": [
+        "!pip uninstall -y keras-nightly tensorflow"
       ]
     },
     {
       "cell_type": "code",
+      "execution_count": 2,
       "metadata": {
-        "id": "80mQInA_ulLP",
-        "outputId": "925acad8-f2cf-4cc7-f23a-ee58782bf333",
         "colab": {
           "base_uri": "https://localhost:8080/"
+        },
+        "id": "80mQInA_ulLP",
+        "outputId": "925acad8-f2cf-4cc7-f23a-ee58782bf333",
+        "vscode": {
+          "languageId": "python"
         }
       },
-      "source": [
-        "!pip install tensorboard==1.15.0 tensorflow==1.15.0 tensorflow-estimator==1.15.1 tensorflow-gpu==1.15.2 tensorflow-gpu-estimator==2.1.0 Keras==2.2.5 Keras-Applications==1.0.8 Keras-Preprocessing==1.1.0 h5py==2.10.0 imutils scikit-learn==0.22."
-      ],
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Collecting tensorboard==1.15.0\n",
             "  Downloading tensorboard-1.15.0-py3-none-any.whl (3.8 MB)\n",
@@ -205,6 +161,9 @@
             "Successfully installed Keras-2.2.5 Keras-Applications-1.0.8 Keras-Preprocessing-1.1.0 gast-0.2.2 h5py-2.10.0 scikit-learn-0.22 tensorboard-1.15.0 tensorflow-1.15.0 tensorflow-estimator-1.15.1 tensorflow-gpu-1.15.2 tensorflow-gpu-estimator-2.1.0\n"
           ]
         }
+      ],
+      "source": [
+        "!pip install tensorboard==1.15.0 tensorflow==1.15.0 tensorflow-estimator==1.15.1 tensorflow-gpu==1.15.2 tensorflow-gpu-estimator==2.1.0 Keras==2.2.5 Keras-Applications==1.0.8 Keras-Preprocessing==1.1.0 h5py==2.10.0 imutils scikit-learn==0.22."
       ]
     },
     {
@@ -218,22 +177,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 3,
       "metadata": {
-        "id": "-WA1QlbQjJhN",
-        "outputId": "de59ffdd-0021-4849-dd17-7fa9b843005f",
         "colab": {
           "base_uri": "https://localhost:8080/"
+        },
+        "id": "-WA1QlbQjJhN",
+        "outputId": "de59ffdd-0021-4849-dd17-7fa9b843005f",
+        "vscode": {
+          "languageId": "python"
         }
       },
-      "source": [
-        "%cd drive/MyDrive/\n",
-        "!git clone https://github.com/SESL-KMU/Autonomous-AI.git"
-      ],
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "[Errno 2] No such file or directory: 'drive/MyDrive/'\n",
             "/content\n",
@@ -247,6 +205,9 @@
             "Checking out files: 100% (18838/18838), done.\n"
           ]
         }
+      ],
+      "source": [
+        "!git clone https://github.com/SESL-KMU/Autonomous-AI.git"
       ]
     },
     {
@@ -260,25 +221,28 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 4,
       "metadata": {
-        "id": "xIwVrgKYtyJz",
-        "outputId": "b8888951-4db9-45e5-b82c-41902a1bd62c",
         "colab": {
           "base_uri": "https://localhost:8080/"
+        },
+        "id": "xIwVrgKYtyJz",
+        "outputId": "b8888951-4db9-45e5-b82c-41902a1bd62c",
+        "vscode": {
+          "languageId": "python"
         }
       },
-      "source": [
-        "cd Autonomous-AI/Day2/2_06_DeepSORT_object_Tracking"
-      ],
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "/content/Autonomous-AI/Day2/2_06_DeepSORT_object_Tracking\n"
           ]
         }
+      ],
+      "source": [
+        "cd Autonomous-AI/Day2/2_06_DeepSORT_object_Tracking"
       ]
     },
     {
@@ -292,24 +256,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 5,
       "metadata": {
-        "id": "uXzSG6pSvpZR",
-        "outputId": "8a847624-5018-49c4-c2ea-3075541eae63",
         "colab": {
           "base_uri": "https://localhost:8080/"
+        },
+        "id": "uXzSG6pSvpZR",
+        "outputId": "8a847624-5018-49c4-c2ea-3075541eae63",
+        "vscode": {
+          "languageId": "python"
         }
       },
-      "source": [
-        "import os\n",
-        "\n",
-        "if not os.path.exists('yolov4.weights'):\n",
-        "  !wget https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights"
-      ],
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "--2022-01-10 14:07:31--  https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights\n",
             "Resolving github.com (github.com)... 140.82.114.4\n",
@@ -329,6 +290,12 @@
             "\n"
           ]
         }
+      ],
+      "source": [
+        "import os\n",
+        "\n",
+        "if not os.path.exists('yolov4.weights'):\n",
+        "  !wget https://github.com/AlexeyAB/darknet/releases/download/darknet_yolo_v3_optimal/yolov4.weights"
       ]
     },
     {
@@ -342,22 +309,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 6,
       "metadata": {
-        "id": "kdm-l88JxNsz",
-        "outputId": "9a193e5d-99ad-4627-982f-71233eef0eee",
         "colab": {
           "base_uri": "https://localhost:8080/"
+        },
+        "id": "kdm-l88JxNsz",
+        "outputId": "9a193e5d-99ad-4627-982f-71233eef0eee",
+        "vscode": {
+          "languageId": "python"
         }
       },
-      "source": [
-        "if not os.path.exists('./model_data/yolo4.h5'):\n",
-        "  !python convert.py"
-      ],
-      "execution_count": 6,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Using TensorFlow backend.\n",
             "WARNING:tensorflow:From /usr/local/lib/python3.7/dist-packages/keras/backend/tensorflow_backend.py:190: The name tf.get_default_session is deprecated. Please use tf.compat.v1.get_default_session instead.\n",
@@ -538,6 +504,10 @@
             "Use tf.where in 2.0, which has the same broadcast rule as np.where\n"
           ]
         }
+      ],
+      "source": [
+        "if not os.path.exists('./model_data/yolo4.h5'):\n",
+        "  !python convert.py"
       ]
     },
     {
@@ -560,21 +530,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 7,
       "metadata": {
-        "id": "Lwl1MW78qsnK",
-        "outputId": "216fd93f-c53e-4e36-b46c-63b70d7accc4",
         "colab": {
           "base_uri": "https://localhost:8080/"
+        },
+        "id": "Lwl1MW78qsnK",
+        "outputId": "216fd93f-c53e-4e36-b46c-63b70d7accc4",
+        "vscode": {
+          "languageId": "python"
         }
       },
-      "source": [
-        "!gdown --id 1V68xfo5-YrpHgh0IPuAPWD21rM6U17hW --output KITTI_data.mp4"
-      ],
-      "execution_count": 7,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Downloading...\n",
             "From: https://drive.google.com/uc?id=1V68xfo5-YrpHgh0IPuAPWD21rM6U17hW\n",
@@ -582,6 +552,9 @@
             "\r  0% 0.00/13.3M [00:00<?, ?B/s]\r 75% 9.96M/13.3M [00:00<00:00, 98.8MB/s]\r100% 13.3M/13.3M [00:00<00:00, 81.6MB/s]\n"
           ]
         }
+      ],
+      "source": [
+        "!gdown --id 1V68xfo5-YrpHgh0IPuAPWD21rM6U17hW --output KITTI_data.mp4"
       ]
     },
     {
@@ -597,21 +570,21 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 8,
       "metadata": {
-        "id": "5QZdN_xxxQ1m",
-        "outputId": "6ca32923-a812-4860-d52d-7ed542754088",
         "colab": {
           "base_uri": "https://localhost:8080/"
+        },
+        "id": "5QZdN_xxxQ1m",
+        "outputId": "6ca32923-a812-4860-d52d-7ed542754088",
+        "vscode": {
+          "languageId": "python"
         }
       },
-      "source": [
-        "!python demo.py KITTI_data.mp4"
-      ],
-      "execution_count": 8,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "Using TensorFlow backend.\n",
             "/usr/local/lib/python3.7/dist-packages/sklearn/utils/linear_assignment_.py:22: FutureWarning: The linear_assignment_ module is deprecated in 0.21 and will be removed from 0.23. Use scipy.optimize.linear_sum_assignment instead.\n",
@@ -1607,6 +1580,9 @@
             "imutils FPS: 6.149085704703191\n"
           ]
         }
+      ],
+      "source": [
+        "!python demo.py KITTI_data.mp4"
       ]
     },
     {
@@ -1620,96 +1596,58 @@
     },
     {
       "cell_type": "code",
+      "execution_count": 9,
       "metadata": {
-        "id": "aU9C-49Gqxo_",
-        "outputId": "d0ca13db-e050-4679-88ee-2dcef990bb34",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 17
+        },
+        "id": "aU9C-49Gqxo_",
+        "outputId": "d0ca13db-e050-4679-88ee-2dcef990bb34",
+        "vscode": {
+          "languageId": "python"
         }
       },
+      "outputs": [
+        {
+          "data": {
+            "application/javascript": "\n    async function download(id, filename, size) {\n      if (!google.colab.kernel.accessAllowed) {\n        return;\n      }\n      const div = document.createElement('div');\n      const label = document.createElement('label');\n      label.textContent = `Downloading \"${filename}\": `;\n      div.appendChild(label);\n      const progress = document.createElement('progress');\n      progress.max = size;\n      div.appendChild(progress);\n      document.body.appendChild(div);\n\n      const buffers = [];\n      let downloaded = 0;\n\n      const channel = await google.colab.kernel.comms.open(id);\n      // Send a message to notify the kernel that we're ready.\n      channel.send({})\n\n      for await (const message of channel.messages) {\n        // Send a message to notify the kernel that we're ready.\n        channel.send({})\n        if (message.buffers) {\n          for (const buffer of message.buffers) {\n            buffers.push(buffer);\n            downloaded += buffer.byteLength;\n            progress.value = downloaded;\n          }\n        }\n      }\n      const blob = new Blob(buffers, {type: 'application/binary'});\n      const a = document.createElement('a');\n      a.href = window.URL.createObjectURL(blob);\n      a.download = filename;\n      div.appendChild(a);\n      a.click();\n      div.remove();\n    }\n  ",
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        },
+        {
+          "data": {
+            "application/javascript": "download(\"download_530055fd-b67e-4cf4-b247-24748058b73c\", \"video_masked.avi\", 19263966)",
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ]
+          },
+          "metadata": {},
+          "output_type": "display_data"
+        }
+      ],
       "source": [
         "from google.colab import files\n",
         "files.download('video_masked.avi')"
-      ],
-      "execution_count": 9,
-      "outputs": [
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "\n",
-              "    async function download(id, filename, size) {\n",
-              "      if (!google.colab.kernel.accessAllowed) {\n",
-              "        return;\n",
-              "      }\n",
-              "      const div = document.createElement('div');\n",
-              "      const label = document.createElement('label');\n",
-              "      label.textContent = `Downloading \"${filename}\": `;\n",
-              "      div.appendChild(label);\n",
-              "      const progress = document.createElement('progress');\n",
-              "      progress.max = size;\n",
-              "      div.appendChild(progress);\n",
-              "      document.body.appendChild(div);\n",
-              "\n",
-              "      const buffers = [];\n",
-              "      let downloaded = 0;\n",
-              "\n",
-              "      const channel = await google.colab.kernel.comms.open(id);\n",
-              "      // Send a message to notify the kernel that we're ready.\n",
-              "      channel.send({})\n",
-              "\n",
-              "      for await (const message of channel.messages) {\n",
-              "        // Send a message to notify the kernel that we're ready.\n",
-              "        channel.send({})\n",
-              "        if (message.buffers) {\n",
-              "          for (const buffer of message.buffers) {\n",
-              "            buffers.push(buffer);\n",
-              "            downloaded += buffer.byteLength;\n",
-              "            progress.value = downloaded;\n",
-              "          }\n",
-              "        }\n",
-              "      }\n",
-              "      const blob = new Blob(buffers, {type: 'application/binary'});\n",
-              "      const a = document.createElement('a');\n",
-              "      a.href = window.URL.createObjectURL(blob);\n",
-              "      a.download = filename;\n",
-              "      div.appendChild(a);\n",
-              "      a.click();\n",
-              "      div.remove();\n",
-              "    }\n",
-              "  "
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "application/javascript": [
-              "download(\"download_530055fd-b67e-4cf4-b247-24748058b73c\", \"video_masked.avi\", 19263966)"
-            ],
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ]
-          },
-          "metadata": {}
-        }
       ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "Yxbysj8iG-T8"
-      },
-      "source": [
-        ""
-      ],
-      "execution_count": null,
-      "outputs": []
     }
-  ]
+  ],
+  "metadata": {
+    "accelerator": "GPU",
+    "colab": {
+      "collapsed_sections": [],
+      "name": "DeepSort_object_tracking.ipynb",
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
